[package]
name = "forward-wall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
axum-extra = { version = "0.9", features = ["cookie"] }
cookie = { version = "0.18" }
serde = { version = "1" }
anyhow = { version = "1" }
